# python-boilerplate

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.docker/python/: Dockerfile
.github/workflows/: code-quality.yml  python.yml  renovate.yml
shared/utils/: README.md  pyproject.toml
shared/utils/src/utils/: __init__.py
src/core/: .env.example  README.md  pyproject.toml
src/core/core/models/: config.py
src/core/core/services/: user_service.py
src/core/src/clients/: http_client.py
src/core/src/config/: config.yaml  logger_config.py
src/core/src/core/: __init__.py  main.py
src/core/src/core/commands/: user_commands.py
src/core/src/core/config/: registry.py
src/core/src/core/models/: config.py  user.py
