[project]
name = "core"
version = "0.0.0"
description = "Core functionality"
authors = [
  {name="Aleksander Kowalski"}
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "utils",
    "typer>=0.12.5"
]

[project.scripts]
core = "core.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }
