[project]
name = "core"
version = "0.0.0"
description = "Core functionality"
authors = [
  { name = "Aleksander Kowalski" }
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "utils",
  "typer>=0.12.5",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "wireup>=0.8.0",
  "requests>=2.31.0",
  "tabulate>=0.9.0"
]

[project.scripts]
core = "core.main:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }
